--- a/views/contact.pug
+++ b/views/contact.pug
@@ -5,13 +5,13 @@ block head
 
 block content
   .pb-2.mt-2.mb-4.border-bottom
-    h3 Contact Form
+    h3 Contato
 
   form(method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
     if (unknownUser)
       .form-group.row
-        label(class='col-md-2 col-form-label font-weight-bold', for='name') Name
+        label(class='col-md-2 col-form-label font-weight-bold', for='name') Nome
         .col-md-8
           input.form-control(type='text', name='name', id='name', autocomplete='name', autofocus, required)
       .form-group.row
@@ -19,7 +19,7 @@ block content
         .col-md-8
           input.form-control(type='email', name='email', id='email', autocomplete='email', required)
     .form-group.row
-      label(class='col-md-2 col-form-label font-weight-bold', for='message') Please describe the issue or your suggestion
+      label(class='col-md-2 col-form-label font-weight-bold', for='message') Mensagem
       .col-md-8
         textarea.form-control(name='message', id='message', rows='7', autofocus=(!unknownUser).toString(), required)
     .form-group
@@ -28,4 +28,4 @@ block content
         br
         button.btn.btn-primary(type='submit')
           i.far.fa-envelope.fa-sm.iconpadding
-          | Send
+          | Enviar
