--- a/views/account/forgot.pug
+++ b/views/account/forgot.pug
@@ -2,10 +2,10 @@ extends ../layout
 
 block content
   .pb-2.mt-2.mb-4.border-bottom
-    h3 Forgot Password
+    h3 Perdeu a Chave ?
   form(method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
-    p.pb-4 Enter your email address below and we will send you password reset instructions.
+    p.pb-4 Digite seu endereço de e-mail abaixo e enviaremos instruções para redefinição de senha.
     .form-group.row.row.mb-3
       label.col-md-3.col-form-label.font-weight-bold.text-right(for='email') Email
       .col-md-7
@@ -13,4 +13,4 @@ block content
     .form-group.offset-sm-3.col-md-7.pl-2
       button.btn.btn-primary(type='submit')
         i.fas.fa-key.fa-sm.iconpadding
-        | Reset Password
+        | Enviar Instrucões
