--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   .pb-2.mt-2.mb-4.border-bottom
-    h3 Sign in
+    h3 Entrar
   form(method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
     .form-group.row.mb-3
@@ -10,15 +10,15 @@ block content
       .col-md-7
         input.form-control(type='email', name='email', id='email', placeholder='Email', autofocus, autocomplete='email', required)
     .form-group.row.mb-3
-      label.col-md-3.col-form-label.font-weight-bold.text-right(for='password') Password
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='password') Chave
       .col-md-7
-        input.form-control(type='password', name='password', id='password', placeholder='Password', autocomplete='current-password', required)
+        input.form-control(type='password', name='password', id='password', placeholder='Chave', autocomplete='current-password', required)
     .form-group
       .offset-md-3.col-md-7.pl-2
         button.col-md-3.btn.btn-primary(type='submit')
           i.far.fa-user.fa-sm.iconpadding
-          | Login
-        a.btn.btn-link(href='/forgot') Forgot your password?
+          | Entrar
+        a.btn.btn-link(href='/forgot') Esqueceu a chave?
     .form-group
       .offset-md-3.col-md-7.pl-2
         hr
@@ -26,22 +26,22 @@ block content
       .offset-md-3.col-md-7.pl-2.d-grid.gap-2
         a.btn.btn-block.btn-google.btn-social(href='/auth/google')
           i.fab.fa-google.fa-xs
-          | Sign in with Google
+          | Entrar com Google
         a.btn.btn-block.btn-facebook.btn-social(href='/auth/facebook')
           i.fab.fa-facebook-f.fa-sm
-          | Sign in with Facebook
+          | Entrar com Facebook
         a.btn.btn-block.btn-twitter.btn-social(href='/auth/twitter')
           i.fab.fa-twitter.fa-sm
-          | Sign in with Twitter
+          | Entrar com Twitter
         a.btn.btn-block.btn-linkedin.btn-social(href='/auth/linkedin')
           i.fab.fa-linkedin-in.fa-sm
-          | Sign in with LinkedIn
+          | Entrar com LinkedIn
         a.btn.btn-block.btn-twitch.btn-social(href='/auth/twitch')
           i.fab.fa-twitch.fa-sm
-          | Sign in with Twitch
+          | Entrar com Twitch
         a.btn.btn-block.btn-github.btn-social(href='/auth/github')
           i.fab.fa-github.fa-sm
-          | Sign in with GitHub
+          | Entrar com GitHub
         a.btn.btn-block.btn-snapchat.btn-social(href='/auth/snapchat')
           i.fab.fa-snapchat-ghost.fa-sm
-          | Sign in with Snapchat
+          | Entrar com Snapchat
