--- a/views/account/profile.pug
+++ b/views/account/profile.pug
@@ -2,133 +2,120 @@ extends ../layout
 
 block content
   .pb-2.mt-2.mb-4.border-bottom
-    h3 Profile Information
+    h3 Perfil
 
-  form(action='/account/profile', method='POST')
+  form.form-horizontal(action='/account/profile', method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
-    .form-group.row
+    .form-group.row.mb-3
       label.col-md-3.col-form-label.font-weight-bold.text-right(for='email') Email
       .col-md-7
-        input.form-control(type='email', name='email', id='email', value=user.email, autocomplete='email', required)
-      .offset-sm-3.col-md-7.pl-3.mb-2
-        if user.emailVerified
-          .text-success.font-italic
-            | Verified
-        else
-          .text-danger.font-italic
-            | Unverified: &nbsp;
-            a(href='/account/verify') Send verification email
-    .form-group.row
-      label.col-md-3.col-form-label.font-weight-bold.text-right(for='name') Name
-      .col-md-7.mt-2
-        input.form-control(type='text', name='name', id='name', value=user.profile.name, autocomplete='name')
-    .form-group.row
-      label.col-md-3.col-form-label.font-weight-bold.text-right Gender
-      .col-sm-6.mt-2
-        .form-check.form-check-inline
-          input(type='radio', class='form-check-input' checked=user.profile.gender == 'male', name='gender', value='male', data-toggle='radio')
-          label.form-check-label Male
-
-        .form-check.form-check-inline
-          input(type='radio', class='form-check-input' checked=user.profile.gender == 'female', name='gender', value='female', data-toggle='radio')
-          label.form-check-label Female
-
-        .form-check.form-check-inline
-          input(type='radio', class='form-check-input' checked=user.profile.gender == 'other', name='gender', value='other', data-toggle='radio')
-          label.form-check-label Other
-    .form-group.row
-      label.col-md-3.col-form-label.font-weight-bold.text-right(for='location') Location
-      .col-md-7.mb-2
-        input.form-control(type='text', name='location', id='location', value=user.profile.location, autocomplete)
-    .form-group.row
+        input.form-control(type='email', name='email', id='email', value=user.email)
+    .form-group.row.mb-3
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='name') Nome
+      .col-md-7
+        input.form-control(type='text', name='name', id='name', value=user.profile.name)
+    .form-group.row.mb-3
+      label.col-md-3.col-form-label.font-weight-bold.text-right Gênero
+      .col-md-7
+        label.radio.col-sm-3
+          input(type='radio', checked=user.profile.gender=='male', name='gender', value='male', data-toggle='radio')
+          span Masculino
+        label.radio.col-sm-3
+          input(type='radio', checked=user.profile.gender=='female', name='gender', value='female', data-toggle='radio')
+          span Feminino
+        label.radio.col-sm-3
+          input(type='radio', checked=user.profile.gender=='other', name='gender', value='other', data-toggle='radio')
+          span Outro
+    .form-group.row.mb-3
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='location') Localização
+      .col-md-7
+        input.form-control(type='text', name='location', id='location', value=user.profile.location)
+    .form-group.row.mb-3
       label.col-md-3.col-form-label.font-weight-bold.text-right(for='website') Website
-      .col-md-7.mb-2
-        input.form-control(type='text', name='website', id='website', value=user.profile.website, autocomplete='url')
-    .form-group.row
+      .col-md-7
+        input.form-control(type='text', name='website', id='website', value=user.profile.website)
+    .form-group.row.mb-3
       label.col-md-3.col-form-label.font-weight-bold.text-right Gravatar
-      .col-sm-4.mb-2
+      .col-md-7
         img(src=user.gravatar(), class='profile', width='100', height='100')
-    .form-group
-      .offset-sm-3.col-md-7.pl-2
+    .form-group.row.mb-3
+      .col-md-7.offset-md-3
         button.btn.btn.btn-primary(type='submit')
-          i.fas.fa-pencil-alt.fa-sm.iconpadding
-          | Update Profile
+          i.fa.fa-pencil
+          | Atualizar Perfil
 
-  .pb-2.mt-2.mb-4.border-bottom
-    h3 Change Password
-
-  form(action='/account/password', method='POST')
-    input(type='hidden', name='_csrf', value=_csrf)
-    .form-group.row
-      label.col-md-3.col-form-label.font-weight-bold.text-right(for='password') New Password
-      .col-md-7.mb-2
-        input.form-control(type='password', name='password', id='password', autocomplete='new-password', minlength='8', required)
-    .form-group.row
-      label.col-md-3.col-form-label.font-weight-bold.text-right(for='confirmPassword') Confirm Password
-      .col-md-7.mb-2
-        input.form-control(type='password', name='confirmPassword', id='confirmPassword', autocomplete='new-password', minlength='8', required)
-    .form-group
-      .offset-sm-3.col-md-7.pl-2
-        button.btn.btn-primary(type='submit')
-          i.fas.fa-lock.fa-sm.iconpadding
-          | Change Password
-
-  .pb-2.mt-2.mb-4.border-bottom
-    h3 Delete Account
-
-  form(action='/account/delete', method='POST', onsubmit="return confirm('Are you sure you want to delete your account?');")
-    .form-group
-      p.offset-sm-3.col-md-7.pl-2 You can delete your account, but keep in mind this action is irreversible.
+  if !user.isAdmin
+    .pb-2.mt-5.mb-4.border-bottom
+      h3 Tornar-se Administrador
+      
+    form.form-horizontal(action='/make-admin', method='POST')
       input(type='hidden', name='_csrf', value=_csrf)
-      .offset-sm-3.col-md-7.pl-2
-        button.btn.btn-danger(type='submit')
-          i.fas.fa-trash-alt.fa-sm.iconpadding
-          | Delete my account
+      input(type='hidden', name='userId', value=user._id)
+      .form-group.row.mb-3
+        label.col-md-3.col-form-label.font-weight-bold.text-right(for='secretKey') Chave Secreta
+        .col-md-7
+          input.form-control(type='password', name='secretKey', id='secretKey', required)
+      .form-group.row.mb-3
+        .col-md-7.offset-md-3
+          button.btn.btn-warning(type='submit')
+            i.fas.fa-user-shield.me-2
+            | Tornar-se Admin
+  else
+    .pb-2.mt-5.mb-4.border-bottom
+      h3 Remover Privilégios de Administrador
+      
+    form.form-horizontal(action='/remove-admin', method='POST')
+      input(type='hidden', name='_csrf', value=_csrf)
+      input(type='hidden', name='userId', value=user._id)
+      .form-group.row.mb-3
+        label.col-md-3.col-form-label.font-weight-bold.text-right(for='secretKey') Chave Secreta
+        .col-md-7
+          input.form-control(type='password', name='secretKey', id='secretKey', required)
+      .form-group.row.mb-3
+        .col-md-7.offset-md-3
+          button.btn.btn-danger(type='submit')
+            i.fas.fa-user-times.me-2
+            | Remover Admin
 
-  .pb-2.mt-2.mb-4.border-bottom
-    h3 Linked Accounts
-  .form-group
-    .offset-sm-3.col-md-7.pl-2
+  .pb-2.mt-5.mb-4.border-bottom
+    h3 Alterar Senha
+
+  form.form-horizontal(action='/account/password', method='POST')
+    input(type='hidden', name='_csrf', value=_csrf)
+    .form-group.row.mb-3
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='password') Nova Senha
+      .col-md-7
+        input.form-control(type='password', name='password', id='password')
+    .form-group.row.mb-3
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='confirmPassword') Confirmar Senha
+      .col-md-7
+        input.form-control(type='password', name='confirmPassword', id='confirmPassword')
+    .form-group.row.mb-3
+      .col-md-7.offset-md-3
+        button.btn.btn-primary(type='submit')
+          i.fa.fa-lock
+          | Alterar Senha
+
+  .pb-2.mt-5.mb-4.border-bottom
+    h3 Excluir Conta
+
+  form.form-horizontal(action='/account/delete', method='POST', onsubmit='return confirm("Você tem certeza? Essa ação não pode ser desfeita.");')
+    .form-group.row.mb-3
+      .col-md-7.offset-md-3
+        input(type='hidden', name='_csrf', value=_csrf)
+        button.btn.btn-danger(type='submit')
+          i.fa.fa-trash
+          | Excluir minha conta
+
+  .pb-2.mt-5.mb-4.border-bottom
+    h3 Vincular Contas
+  .row
+    .col-md-3.pb-2
       if user.google
-        p.mb-1: a.text-danger(href='/account/unlink/google') Unlink your Google account
+        p: a.btn.btn-block.btn-google.btn-social(href='/account/unlink/google')
+          i.fab.fa-google-plus-g.fa-sm
+          | Desvincular Google
       else
-        p.mb-1: a(href='/auth/google') Link your Google account
-    .offset-sm-3.col-md-7.pl-2
-      if user.facebook
-        p.mb-1: a.text-danger(href='/account/unlink/facebook') Unlink your Facebook account
-      else
-        p.mb-1: a(href='/auth/facebook') Link your Facebook account
-      if user.snapchat
-        p.mb-1: a.text-danger(href='/account/unlink/snapchat') Unlink your Snapchat account
-      else
-        p.mb-1: a(href='/auth/snapchat') Link your Snapchat account
-    .offset-sm-3.col-md-7.pl-2
-      if user.twitter
-        p.mb-1: a.text-danger(href='/account/unlink/twitter') Unlink your Twitter account
-      else
-        p.mb-1: a(href='/auth/twitter') Link your Twitter account
-    .offset-sm-3.col-md-7.pl-2
-      if user.github
-        p.mb-1: a.text-danger(href='/account/unlink/github') Unlink your GitHub account
-      else
-        p.mb-1: a(href='/auth/github') Link your GitHub account
-    .offset-sm-3.col-md-7.pl-2
-      if user.linkedin
-        p.mb-1: a.text-danger(href='/account/unlink/linkedin') Unlink your LinkedIn account
-      else
-        p.mb-1: a(href='/auth/linkedin') Link your LinkedIn account
-    .offset-sm-3.col-md-7.pl-2
-      if user.steam
-        p.mb-1: a.text-danger(href='/account/unlink/steam') Unlink your Steam account
-      else
-        p.mb-1: a(href='/auth/steam') Link your Steam account
-    .offset-sm-3.col-md-7.pl-2
-      if user.twitch
-        p.mb-1: a.text-danger(href='/account/unlink/twitch') Unlink your Twitch account
-      else
-        p.mb-1: a(href='/auth/twitch') Link your Twitch account
-    .offset-sm-3.col-md-7.pl-2
-      if user.quickbooks
-        p.mb-1: a.text-danger(href='/account/unlink/quickbooks') Unlink your QuickBooks account
-      else
-        p.mb-1: a(href='/auth/quickbooks') Link your QuickBooks account
+        p: a.btn.btn-block.btn-google.btn-social(href='/auth/google')
+          i.fab.fa-google-plus-g.fa-sm
+          | Vincular Google
