--- a/views/account/reset.pug
+++ b/views/account/reset.pug
@@ -2,18 +2,18 @@ extends ../layout
 
 block content
   .pb-2.mt-2.mb-4.border-bottom
-    h3 Reset Password
+    h3 Recuperar Chave
   form(method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
     .form-group.row
-      label.col-md-3.col-form-label.font-weight-bold.text-right(for='password') New Password
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='password') Nova Chave
       .col-md-7
-        input.form-control(type='password', name='password', id='password', placeholder='New password', autofocus, autocomplete='new-password', minlength='8', required)
+        input.form-control(type='password', name='password', id='password', placeholder='Chave', autofocus, autocomplete='new-password', minlength='8', required)
     .form-group.row
-      label.col-md-3.col-form-label.font-weight-bold.text-right(for='confirm') Confirm Password
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='confirm') Confirma a Chave
       .col-md-7
-        input.form-control(type='password', name='confirm', id='confirm', placeholder='Confirm password', autocomplete='new-password', minlength='8', required)
+        input.form-control(type='password', name='confirm', id='confirm', placeholder='Confirme a Chave', autocomplete='new-password', minlength='8', required)
     .form-group.offset-sm-3.col-md-7.pl-2
       button.btn.btn-primary.btn-reset(type='submit')
         i.far.fa-keyboard.fa-sm
-        | Change Password
+        | Salvar
