--- a/views/account/signup.pug
+++ b/views/account/signup.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   .pb-2.mt-2.mb-4.border-bottom
-    h3 Sign up
+    h3 Criar nova conta
   form(id='signup-form', method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
     .form-group.row.mb-3
@@ -10,14 +10,14 @@ block content
       .col-md-7
         input.form-control(type='email', name='email', id='email', placeholder='Email', autofocus, autocomplete='email', required)
     .form-group.row.mb-3
-      label.col-md-3.col-form-label.font-weight-bold.text-right(for='password') Password
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='password') Chave
       .col-md-7
-        input.form-control(type='password', name='password', id='password', placeholder='Password', autocomplete='new-password', minlength='8', required)
+        input.form-control(type='password', name='password', id='password', placeholder='Chave', autocomplete='new-password', minlength='8', required)
     .form-group.row.mb-3
-      label.col-md-3.col-form-label.font-weight-bold.text-right(for='confirmPassword') Confirm Password
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='confirmPassword') Confirmar Chave
       .col-md-7
-        input.form-control(type='password', name='confirmPassword', id='confirmPassword', placeholder='Confirm Password', autocomplete='new-password', minlength='8', required)
+        input.form-control(type='password', name='confirmPassword', id='confirmPassword', placeholder='Confirme a chave', autocomplete='new-password', minlength='8', required)
     .form-group.offset-sm-3.col-md-7.pl-2
       button.btn.btn-success(type='submit')
         i.fas.fa-user-plus.fa-sm.iconpadding
-        | Signup
+        | Criar
