--- a/views/api/index.pug
+++ b/views/api/index.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   .pb-2.mt-2.mb-4.border-bottom
-    h3 API Examples
+    h3 Exemplos de API
 
   .row
     .col-md-4
