--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,12 +1,12 @@
 footer.mt-auto.py-3.bg-light
   .container.d-flex.justify-content-between
-    span © 2023 Company, Inc. All Rights Reserved
+    span © 2025 GG, Todos os direitos reservados
     ul.mb-0
       li.list-inline-item
-        a(href='https://github.com/sahat/hackathon-starter') GitHub Project
+        a(href='https://github.com/') GitHub 
       li.list-inline-item
-        a(href='https://github.com/sahat/hackathon-starter/issues') Issues
+        a(href='https://github.com/') Bugs
       li.list-inline-item
-        a(href='/privacy-policy.html') Privacy Policy
+        a(href='/privacy-policy.html') Política de privacidade
       li.list-inline-item
-        a(href='/terms-of-use.html') Terms of Use
+        a(href='/terms-of-use.html') Termos de uso
